--- a/Diplom_alina/app/views/plans/new.html.haml
+++ b/Diplom_alina/app/views/plans/new.html.haml
@@ -1,5 +1,8 @@
-%h1 New plan
+.row
+  .col-lg-12
+    %h1{:class=>"page-header"} Новый учебный план
+
 
 = render 'form'
 
-= link_to 'Back', plans_path
+= link_to 'Назад', plans_path
