--- a/Diplom_alina/app/views/subdivisions/edit.html.haml
+++ b/Diplom_alina/app/views/subdivisions/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing subdivision
+%h1 Редактирование подразделения
 
 = render 'form'
 
-= link_to 'Show', @subdivision
+= link_to 'Показать', @subdivision
 \|
-= link_to 'Back', subdivisions_path
+= link_to 'Назад', groups_path
