--- a/Diplom_alina/app/views/specialities/new.html.haml
+++ b/Diplom_alina/app/views/specialities/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New speciality
+.row
+  .col-lg-12
+    %h1{:class=>"page-header"} Новая специальность
 
 = render 'form'
 
-= link_to 'Back', specialities_path
+= link_to 'Назад', specialities_path
