--- a/Diplom_alina/app/views/subdivisions/_form.html.haml
+++ b/Diplom_alina/app/views/subdivisions/_form.html.haml
@@ -6,11 +6,11 @@
         - @subdivision.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :type_num
-    = f.number_field :type_num
-  .field
-    = f.label :type_title
-    = f.text_field :type_title
+  .form-group
+    = f.label 'Название кафедры'
+    = f.text_field :chairisting, :class=>'form-control'
+  .form-group
+    = f.label 'Название университета'
+    = f.text_field :institution, :class=>'form-control'
   .actions
-    = f.submit 'Save'
+    = f.submit 'Сохранить', :class=>'btn btn-default btn-primary'
