--- a/Diplom_alina/app/views/terms/edit.html.haml
+++ b/Diplom_alina/app/views/terms/edit.html.haml
@@ -53,6 +53,6 @@
                 = f.submit 'Сохранить', class: "btn btn-primary", :disabled=>true
 
 
-= link_to 'Show', @term
+= link_to 'Просмотреть', @term
 \|
-= link_to 'Back', terms_path
+= link_to 'Назад', terms_path
