--- a/Diplom_alina/app/views/terms/index.html.haml
+++ b/Diplom_alina/app/views/terms/index.html.haml
@@ -8,7 +8,6 @@
       %th Окончание
       %th
       %th
-      %th
 
   -# по хорошему надо бы вписать осень зима весна,
   %tbody
@@ -17,9 +16,8 @@
         %td= term.year.start_year.year.to_s + "/" + term.year.end_year.year.to_s
         %td= term.start_term
         %td= term.end_term
-        %td= link_to 'Show', term
-        %td= link_to 'Edit', edit_term_path(term)
-        %td= link_to 'Destroy', term, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Редактировать', edit_term_path(term)
+        %td= link_to 'Удалить', term, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
