--- a/Diplom_alina/app/views/terms/index.html.haml
+++ b/Diplom_alina/app/views/terms/index.html.haml
@@ -24,4 +24,12 @@
 
 
 
-= link_to 'Создать', new_term_path, :class=>'btn btn-primary'
+
+
+
+.row
+  .col-md-10
+    .col-md-4
+      = link_to 'Создать', new_term_path, :class=>'btn btn-primary'
+    .col-md-6
+      =paginate @terms
