Подправлены вьюшки. Осталось сделать поиск, добавить к создию студента нововведеные элементы, разбросать доступ к данным, подправить меню пользователя (не чекается выход пользователя системы)

--- a/Diplom_alina/app/views/groups/index.html.haml
+++ b/Diplom_alina/app/views/groups/index.html.haml
@@ -1,9 +1,12 @@
+.row
+  .col-lg-12
+    %h1{:class=>"page-header"} Списки групп
 
 .row
   .col-lg-12
     .panel.panel-default
       .panel-heading
-        Списки групп на 
+        -#Списки групп на
         -#%strong{:class=>'sys-date-actual'}= @date_actual.to_date
         -#= ") информация"
       .panel-body
