--- a/Diplom_alina/app/views/searches/new.html.haml
+++ b/Diplom_alina/app/views/searches/new.html.haml
@@ -7,7 +7,7 @@
       .panel-heading
         Аттрибуты для поиска
       .panel-body
-        %form
+        %form{:action=>'/result'}
           .row
             .col-md-12
               .pull-right
