--- a/Diplom_alina/app/views/terms/index.html.haml
+++ b/Diplom_alina/app/views/terms/index.html.haml
@@ -1,4 +1,6 @@
-%h1 Список учебных периодов
+.row
+  .col-lg-12
+    %h1{:class=>"page-header"} Список учебных периодов
 
 %table.table.table-bordered
   %thead
