--- a/Diplom_alina/app/views/specialities/show.html.haml
+++ b/Diplom_alina/app/views/specialities/show.html.haml
@@ -1,4 +1,9 @@
-%p#notice= notice
+
+.row
+  .col-md-12
+    - if notice
+      .alert.alert-success{:style=>'margin-right: 30px;'}
+        %p#notice= notice
 
 .row
   .col-lg-12
