--- a/Diplom_alina/app/views/searches/new.html.haml
+++ b/Diplom_alina/app/views/searches/new.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-lg-12
-    %h1{:class=>"page-header"} Поиск студентов
+    %h1{:class=>'page-header'} Поиск студентов
 .row
   .col-lg-12
     .panel.panel-default
@@ -12,92 +12,73 @@
             .col-md-12
               .pull-right
                 %button{:class=>'btn btn-primary'} найти
-                %a{:href=>"#", :class=>'btn btn-default btn-grey'} Сбросить
+                %a{:href=>'#', :class=>'btn btn-default btn-grey'} Сбросить
           .row
             .col-md-4
               .form-group
                 %label Имя
-                %input{:class=>'form-control', :placeholder=>"Введите имя студента"}
+                %input{:class=>'form-control', :name=>'first_name', :placeholder=>'Введите имя студента'}
             .col-md-4
               .form-group
                 %label Фамилия
-                %input{:class=>'form-control', :placeholder=>"Введите фамилию студента"}
+                %input{:class=>'form-control', :name=>'second_name', :placeholder=>'Введите фамилию студента'}
             .col-md-4
               .form-group
                 %label Отчество
-                %input{:class=>'form-control', :placeholder=>"Введите отчество студента"}
+                %input{:class=>'form-control', :name=>'last_name', :placeholder=>'Введите отчество студента'}
           .row
             .col-md-4
               .form-group
                 %label Дата рождения
-                %input{:class=>'form-control', :placeholder=>"Введите дату рождения"}
+                %input{:class=>'form-control datepicker', :name=>'birthday', :placeholder=>'Введите дату рождения'}
             .col-md-2
               .form-group
-                %label Возраст
-                %input{:class=>'form-control', :placeholder=>"От"}
+                %label Паспортные данные
+                %input{:class=>'form-control', :name=>'passport_series', :placeholder=>'Серия'}
             .col-md-2
               .form-group
                 %label{:style=>'height: 12px;'}
-                %input{:class=>'form-control', :placeholder=>"До"}
+                %input{:class=>'form-control', :name=>'passport_number', :placeholder=>'Номер'}
+
             .col-md-4
               .form-group
                 %label Пол
-                = select_tag :sex, options_for_select([['Мужской','m'],['Женский','w']]), class: 'form-control'
-
+                = select_tag :sex, options_for_select([['Не выбрано', 0],%w(Мужской m),%w(Женский w)]), class: 'form-control'
           .row
             .col-md-4
               .form-group
                 %label Номер студенческого
-                %input{:class=>'form-control', :placeholder=>""}
-            .col-md-2
-              .form-group
-                %label Паспортные данные
-                %input{:class=>'form-control', :placeholder=>"Серия"}
-            .col-md-2
-              .form-group
-                %label{:style=>'height: 12px;'}
-                %input{:class=>'form-control', :placeholder=>"Номер"}
+                %input{:class=>'form-control', :name=>'ducket_number', :placeholder=>'Введите номер студенческого'}
             .col-md-4
               .form-group
-                %label Номер читательского
-                %input{:class=>'form-control', :placeholder=>""}
+                %label Специальность
+                = select_tag :speciality, options_for_select(get_options_speciality), class: 'form-control'
+            .col-md-4
+              .form-group
+                %label Направление
+                = select_tag :plan, options_for_select([['Ничего не выбрано', 0]]), class: 'form-control'
+
           .row
-            .col-md-4
+            .col-md-2
               .form-group
-                %label Факультет
-                = select_tag :facult, options_for_select([['Ничего не выбрано','0']]), class: 'form-control'
-            .col-md-4
-              .form-group
-                %label Выпускающая кафедра
-                = select_tag :subdivision, options_for_select([['Ничего не выбрано','0']]), class: 'form-control'
-            .col-md-4
+                %label Подразделение
+                = select_tag :subdivision, options_for_select(get_options_subdivisions), class: 'form-control'
+
+            .col-md-2
               .form-group
                 %label Группа
-                = select_tag :facult, options_for_select([['Ничего не выбрано','0']]), class: 'form-control'
-          .row
+                = select_tag :group, options_for_select(get_options_groups), class: 'form-control'
             .col-md-4
-              .form-group
-                %label Учебный год
-                = select_tag :stud_year, options_for_select([['2015/2016','0']]), class: 'form-control'
-            .col-md-2
-              .form-group
-                %label Курс
-                = select_tag :curs, options_for_select([['','0']]), class: 'form-control'
-            .col-md-2
-              .form-group
-                %label Семестр
-                = select_tag :semestr, options_for_select([['','0']]), class: 'form-control'
-            .col-md-4
-              .form-group
-                %label Учебное полугодие
-                = select_tag :time_year, options_for_select([['Весна','0']]), class: 'form-control'
-          .row
-            .col-md-10
-              .form-group
-                %label Учебный план/Специальность или направление/Уровень образования
-                = select_tag :speciality, options_for_select([['Ничего не выбрано','0']]), class: 'form-control'
-            .col-md-2
               .form-group
                 %label Тип обучения
-                = select_tag :speciality, options_for_select([['Очное','0'],['Зачное','1'], ['Удаленное','2'] ]), class: 'form-control'
-          .clearfix
+                = select_tag :form_study, options_for_select(get_options_form_study), class: 'form-control'
+            .col-md-2
+              .form-group
+                %label Учебный год
+                = select_tag :year, options_for_select(get_options_years), class: 'form-control'
+            .col-md-2
+              .form-group
+                %label Учебное полугодие
+                = select_tag :term, options_for_select([['Не выбрано', 0]]), class: 'form-control'
+
+        .clearfix
